# pai-prediction-example

./: CMakeLists.txt  README.md
echo/: CMakeLists.txt  README.md  processor.cc  service.json
image_classification/: CMakeLists.txt  README.md  service.json  tf_image_processor.cc
